--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
         <i class="fas fa-bars"></i>
       </button>
     </header>
+    <nav>
+      <div class="close">
+        <button type="button" class="menu-bars">
+          <i class="fas fa-times"></i>
+        </button>
+      </div>
+      <ul>
+        <li><a class="nav-link" href="#projects">Portoflio</a></li>
+        <li><a class="nav-link" href="#about-me">About</a></li>
+        <li>
+          <a class="nav-link" href="#contact"
+            >Contact <i class="far fa-envelope"></i
+          ></a>
+        </li>
+      </ul>
+    </nav>
     <main>
       <div class="intro">
         <div class="intro-icon">
@@ -295,5 +311,6 @@
       src="https://kit.fontawesome.com/e966a3bd22.js"
       crossorigin="anonymous"
     ></script>
+    <script src="./javascript/app.js"></script>
   </body>
 </html>
