Fix Required Changes

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
           <input
             type="text"
             name="name"
-            placeholder="Text Input"
+            placeholder="Full name"
             maxlength="30"
             class="name"
             required
