--- a/index.html
+++ b/index.html
@@ -310,9 +310,7 @@
     <footer class="about flex-column">
       <h2 id="about__contactUs">CONTACT US</h2>
       <p id="about__needHelp">
-        If you have an application you are interested in developing, a
-        feature that you need built or a project that needs coding. I’d love
-        to help with it
+        I'm always interested in hearing about new projects, so if you'd like to chat please get in.
       </p>
       <form
         action="https://formspree.io/f/mbjqvypj"
